2006-04-19  Alexander Larsson  <alexl@redhat.com>

	* Makefile.am:
	* configure.in:
	* dav_groupfile:
	* dav_user.conf:
	* dav_user_2.0.conf:
	* dav_user_2.2.conf:
	Add configuration for httpd 2.2.
	Autodetect version or allow manual specification.

2006-04-17  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Remove obsolete entry for no_NO
	* po/no.po: And the translation.

2006-01-24  Clytie Siddall <clytie@riverland.net.au>

	* configure.in	Added vi in ALL_LINGUAS line.
	
	2006-01-06  Kjartan Maraas <kmaraas@gnome.org>

	* configure.in: Add nb and no to ALL_LINGUAS.

2006-01-04  Christophe Merlet  <redfox@redfoxcenter.org>

        * configure.in: Added "fr" to ALL_LINGUAS.

2005-11-22  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post release version bump

=== gnome-user-share 0.9 ===
	
2005-11-22  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release
	
	* configure.in:
	Bump version to 0.9
	
2005-11-22  Alexander Larsson  <alexl@redhat.com>

	* configure.in: 
	* user_share.c: 
	Update to avahi 0.6

=== gnome-user-share 0.8 ===
	
2005-11-14  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release

2005-11-14  Alexander Larsson  <alexl@redhat.com>

	* file-share-properties.c: (main):
	Connect to clicked, not pressed on close button
	
	* user_share.c: (get_share_name), (publish_service):
	Fix howl build. Don't leak share name.

2005-11-09  Alexander Larsson  <alexl@redhat.com>

	* configure.in: 
	Post release version bump.

=== gnome-user-share 0.7 ===
	
2005-11-09  Alexander Larsson  <alexl@redhat.com>

	* gnome-user-share-properties.desktop.in: 
	* Makefile.am:
	* gnome-user-share.spec:
	Add desktop file.

2005-11-09  Alexander Larsson  <alexl@redhat.com>

	* configure.in: 
	post release version bump
	
=== gnome-user-share 0.6 ===
	
2005-11-09  Alexander Larsson  <alexl@redhat.com>

	* gnome-user-share.spec: 
	* NEWS: 
	Update for release.

2005-11-09  Alexander Larsson  <alexl@redhat.com>

	* configure.in: 