@@ -1,5 +1,10 @@
 2006-04-19  Alexander Larsson  <alexl@redhat.com>
 
+	* user_share.c (get_share_name):
+	Include hostname in name string (if availible) (#335879)
+
+2006-04-19  Alexander Larsson  <alexl@redhat.com>
+
 	* Makefile.am:
 	* configure.in:
 	* dav_groupfile:
